Refatorando rotas e criando VideoService e Video Controller
